add chicken curry, samosa page and imges folder

--- a/index.html
+++ b/index.html
@@ -8,12 +8,17 @@
     </head>
     <body>
         <h1 id="header">Cooking with Reddy</h1>
-        <img src="chef.webp" width="400" height="400" alt="chef image" />
+        <img
+            src="./images/chef.webp"
+            width="400"
+            height="400"
+            alt="chef image"
+        />
         <h3>Chef's recommendation's</h3>
         <div>
             <ul>
-                <li><a href="">Chicken Curry</a></li>
-                <li><a href="">Onion samosa | Patti samosa</a></li>
+                <li><a href="Chicken_Curry.html">Chicken Curry</a></li>
+                <li><a href="samosa.html">Onion samosa | Patti samosa</a></li>
                 <li><a href="">Shawarma</a></li>
             </ul>
         </div>
