add Shawarma page

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <ul>
                 <li><a href="Chicken_Curry.html">Chicken Curry</a></li>
                 <li><a href="samosa.html">Onion samosa | Patti samosa</a></li>
-                <li><a href="">Shawarma</a></li>
+                <li><a href="Shawarma.html">Shawarma</a></li>
             </ul>
         </div>
         <a href="#header">Back to top</a>
